controller/test/deployer/testdata/agentgateway-replicas-out.yaml
apiVersion: v1
automountServiceAccountToken: false
kind: ServiceAccount
metadata:
  labels:
    app.kubernetes.io/instance: gw
    app.kubernetes.io/managed-by: agentgateway
    app.kubernetes.io/name: gw
    app.kubernetes.io/version: 1.0.0-ci1
    gateway.networking.k8s.io/gateway-class-name: agentgateway
    gateway.networking.k8s.io/gateway-name: gw
  name: gw
---
apiVersion: v1
data:
  config.yaml: |
    config: {}
kind: ConfigMap
metadata:
  labels:
    app.kubernetes.io/instance: gw
    app.kubernetes.io/managed-by: agentgateway
    app.kubernetes.io/name: gw
    app.kubernetes.io/version: 1.0.0-ci1
    gateway.networking.k8s.io/gateway-class-name: agentgateway
    gateway.networking.k8s.io/gateway-name: gw
  name: gw
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/instance: gw
    app.kubernetes.io/managed-by: agentgateway
    app.kubernetes.io/name: gw
    app.kubernetes.io/version: 1.0.0-ci1
    gateway.networking.k8s.io/gateway-class-name: agentgateway
    gateway.networking.k8s.io/gateway-name: gw
  name: gw
spec:
  ports:
  - name: listener-8080
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/instance: gw
    app.kubernetes.io/name: gw
    gateway.networking.k8s.io/gateway-name: gw
  type: LoadBalancer
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/instance: gw
    app.kubernetes.io/managed-by: agentgateway
    app.kubernetes.io/name: gw
    app.kubernetes.io/version: 1.0.0-ci1
    gateway.networking.k8s.io/gateway-class-name: agentgateway
    gateway.networking.k8s.io/gateway-name: gw
  name: gw
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/instance: gw
      app.kubernetes.io/name: gw
      gateway.networking.k8s.io/gateway-name: gw
  strategy: {}
  template:
    metadata:
      annotations:
        checksum/config: 864542ed2e0b0de7cfd066cda1995c0816d7b62bfd2ec96fd7eaa6f50f2624aa
        checksum/session-key: 2a8abfa8cb9906290437854193ca6bca41d4d4e26d1d454bd66a35158095e737
        prometheus.io/path: /metrics
        prometheus.io/port: "15020"
        prometheus.io/scrape: "true"
      labels:
        app.kubernetes.io/instance: gw
        app.kubernetes.io/name: gw
        gateway.networking.k8s.io/gateway-class-name: agentgateway
        gateway.networking.k8s.io/gateway-name: gw
    spec:
      containers:
      - args:
        - -f
        - /config/config.yaml
        env:
        - name: TERMINATION_GRACE_PERIOD_SECONDS
          value: "60"
        - name: CONNECTION_MIN_TERMINATION_DEADLINE
          value: 10s
        - name: NODE_NAME
          valueFrom:
            fieldRef:
              fieldPath: spec.nodeName
        - name: POD_NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: POD_NAME
          valueFrom:
            fieldRef:
              fieldPath: metadata.name
        - name: RUST_BACKTRACE
          value: "1"
        - name: RUST_LOG
          value: info
        - name: SESSION_KEY
          valueFrom:
            secretKeyRef:
              key: key
              name: gw-session-key
        - name: XDS_ADDRESS
          value: http://xds.cluster.local:9978
        - name: NAMESPACE
          valueFrom:
            fieldRef:
              fieldPath: metadata.namespace
        - name: GATEWAY
          value: gw
        - name: CPU_LIMIT
          valueFrom:
            resourceFieldRef:
              divisor: "1"
              resource: limits.cpu
        - name: INSTANCE_IP
          valueFrom:
            fieldRef:
              fieldPath: status.podIP
        - name: SERVICE_ACCOUNT
          valueFrom:
            fieldRef:
              fieldPath: spec.serviceAccountName
        image: cr.agentgateway.dev/agentgateway:99.99.99
        name: agentgateway
        ports:
        - containerPort: 15020
          name: metrics
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: 15021
          periodSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 10101
        startupProbe:
          failureThreshold: 60
          httpGet:
            path: /healthz/ready
            port: 15021
          periodSeconds: 1
          successThreshold: 1
          timeoutSeconds: 2
        volumeMounts:
        - mountPath: /config
          name: config-volume
        - mountPath: /tmp
          name: tmp
        - mountPath: /var/run/secrets/xds-tokens
          name: xds-token
          readOnly: true
      securityContext:
        sysctls:
        - name: net.ipv4.ip_unprivileged_port_start
          value: "0"
      serviceAccountName: gw
      terminationGracePeriodSeconds: 60
      volumes:
      - configMap:
          name: gw
        name: config-volume
      - name: xds-token
        projected:
          sources:
          - serviceAccountToken:
              audience: agentgateway
              expirationSeconds: 43200
              path: xds-token
      - emptyDir: {}
        name: tmp
status: {}
